<resources>
    <string name="app_name">EasyIotKit</string>
    <string name="user_name_hint">用户名</string>
    <string name="user_password_hint">密码</string>
    <string name="btn_login">登        陆</string>
    <string name="register">还没有账号？立即注册</string>
    <string name="login_title">EasyIotKit</string>
    <string name="register_title">用户注册</string>
    <string name="btn_register">注       册</string>
    <string name="register_name_hint">用户名</string>
    <string name="register_password_hint">密码</string>
    <string name="register_re_password_hint">确认密码</string>
    <string name="register_phone_hint">手机号码</string>
    <string name="register_email_hint">邮箱</string>
    <string name="tab_dev_manage">设备管理</string>
    <string name="tab_sys_state">系统状态</string>
    <string name="tab_my">个人设置</string>
    <string name="add_dev_group_name_hint">群组名称(必须为英文数字组合，不低于6位)</string>
    <string name="add_dev_group_desc_hint">群组备注信息</string>
    <string name="logout">退出登录</string>
    <string name="send">发送</string>
    <string name="send_msg_hint">请输入您要发送的指令,如 1010 </string>
    <string name="add_dev_name_hint">设备名称(必须为英文数字组合，不低于6位)</string>
    <string name="add_dev_desc_hint">设备备注信息</string>
    <string name="add_dev_location_hint">设备所在地名称</string>
    <string name="qq_group">475512169</string>
    <string name="github_addr">https://github.com/wwhai/EasyLinker</string>
    <string name="no_dev_msg">您还没有任何设备，赶快添加吧</string>
    <string name="tab_dev_detail">设备详情</string>
    <string name="smart_config_search">配置设备</string>
    <string name="wifi_ssid_hint">点击选择WIFI</string>
    <string name="wifi_pwd_hind">请输入WIFI密码</string>
    <string name="smart_config_warning">温馨提示:暂不支持5G频段的WIFI网络</string>
    <string name="add_dev_guide_first">扫码绑定您的设备</string>
    <string name="add_dev_guide_already_bind">您已经绑定过设备，请进行网络配置</string>
    <string name="add_dev_guide_config">配置网络</string>
    <string name="add_dev_guide_second">配置设备网络</string>
    <string name="add_dev_guide_bind">立即绑定</string>
    <string name="add_dev_guide_finish">开始使用</string>
    <string name="add_dev_guide_third">恭喜您，设备已经完成所有配置！尽情体验吧！</string>
</resources>
