<?xml version="1.0" encoding="utf-8"?><!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:orientation="horizontal"--><!--android:paddingBottom="@dimen/dp_2"--><!--android:paddingTop="@dimen/dp_2"--><!--android:visibility="gone">-->
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rg_tab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/dp_2"
    android:paddingTop="@dimen/dp_2">

    <!-- 设备管理 -->
    <RadioButton
        android:id="@+id/rb_dev_manage"
        style="@style/home_tab_rb_style"
        android:checked="true"
        android:drawableTop="@drawable/dev_manage_selector"
        android:text="@string/tab_dev_manage" />

    <!-- 系统状态 -->
    <RadioButton
        android:id="@+id/rb_dev_detail"
        style="@style/home_tab_rb_style"
        android:drawableTop="@drawable/sys_state_selector"
        android:text="@string/tab_dev_detail" />


    <!-- 系统状态 -->
    <RadioButton
        android:id="@+id/rb_my_setting"
        style="@style/home_tab_rb_style"
        android:drawableTop="@drawable/my_setting_selector"
        android:text="@string/tab_my" />


</RadioGroup>
