<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/iv_header_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/header_bg"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="H,2:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- 头像 -->
    <wang.tinycoder.easyiotkit.widget.CircleImageView
        android:id="@+id/iv_header"
        android:layout_width="@dimen/dp_68"
        android:layout_height="@dimen/dp_68"
        android:src="@drawable/ic_header_default"
        app:civ_border_color="@color/white"
        app:civ_border_width="@dimen/dp_2"
        app:layout_constraintBottom_toBottomOf="@+id/iv_header_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_header_bg"
        app:layout_constraintVertical_bias="0.4" />

    <!-- 名称 -->
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_6"
        android:gravity="left"
        android:textSize="@dimen/sp_14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_header"
        tools:text="名字" />

    <!-- 签名 -->
    <EditText
        android:id="@+id/et_sign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:background="@null"
        android:enabled="false"
        android:focusable="false"
        android:gravity="center"
        android:textColor="@color/nomal_text_color"
        android:textSize="@dimen/sp_14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        tools:text="签名" />


    <!-- 手机 -->
    <wang.tinycoder.easyiotkit.widget.DrawableSizeTextView
        android:id="@+id/tv_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_10"
        android:drawableLeft="@drawable/ic_color_phone"
        android:drawablePadding="@dimen/dp_10"
        android:gravity="center_vertical"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/dp_20"
        app:dstv_drawableHeight="@dimen/dp_28"
        app:dstv_drawableWidth="@dimen/dp_28"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_header_bg" />

    <!-- 邮箱 -->
    <wang.tinycoder.easyiotkit.widget.DrawableSizeTextView
        android:id="@+id/tv_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:drawableLeft="@drawable/ic_color_email"
        android:drawablePadding="@dimen/dp_10"
        android:gravity="center_vertical"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/dp_20"
        app:dstv_drawableHeight="@dimen/dp_30"
        app:dstv_drawableWidth="@dimen/dp_30"
        app:layout_constraintLeft_toLeftOf="@+id/tv_phone"
        app:layout_constraintRight_toRightOf="@+id/tv_phone"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

    <!-- QQ群 -->
    <wang.tinycoder.easyiotkit.widget.DrawableSizeTextView
        android:id="@+id/tv_qq_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:drawableLeft="@drawable/ic_qq_group"
        android:drawableRight="@drawable/ic_arrow_right"
        android:drawablePadding="@dimen/dp_10"
        android:gravity="center_vertical"
        android:text="@string/qq_group"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/dp_20"
        app:dstv_drawableHeight="@dimen/dp_28"
        app:dstv_drawableWidth="@dimen/dp_28"
        app:layout_constraintLeft_toLeftOf="@+id/tv_phone"
        app:layout_constraintRight_toRightOf="@+id/tv_phone"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />


    <!-- github -->
    <wang.tinycoder.easyiotkit.widget.DrawableSizeTextView
        android:id="@+id/tv_github"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:drawableLeft="@drawable/ic_github"
        android:drawableRight="@drawable/ic_arrow_right"
        android:drawablePadding="@dimen/dp_10"
        android:ellipsize="middle"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/github_addr"
        android:textColor="@color/blue"
        android:textSize="@dimen/dp_15"
        app:dstv_drawableHeight="@dimen/dp_28"
        app:dstv_drawableWidth="@dimen/dp_28"
        app:layout_constraintLeft_toLeftOf="@+id/tv_phone"
        app:layout_constraintRight_toRightOf="@+id/tv_phone"
        app:layout_constraintTop_toBottomOf="@+id/tv_qq_group" />

    <!-- 退出登陆 -->
    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_16"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>